--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Get Subv</title>
 	<link rel="stylesheet" href="assets/third/css/bootstrap.css" />
-	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
 	<script type="text/javascript">
 		function callback(data) {
-			console.log("callbacked");
-			console.log("version_latest: " + data.version_latest);
-			$("#version").text(data.version_latest);
+			//console.log("callbacked");
+			//console.log("version_latest: " + data.version_latest);
+			var v = document.getElementById("version");
+			v.innerText = data.version_latest;
 		}
 	</script>
 	<style>
@@ -37,7 +37,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="span8">
-				<h1 style="margin-bottom: 1em"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/f/fa/Google_Chrome_2011_computer_icon.svg/200px-Google_Chrome_2011_computer_icon.svg.png" alt="Google Chrome Logo" id="chrome-logo">Subv is a Google Chrome extension.</h1>
+				<h1 style="margin-bottom: 1em"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/f/fa/Google_Chrome_2011_computer_icon.svg/200px-Google_Chrome_2011_computer_icon.svg.png" alt="Google Chrome Logo" id="chrome-logo"> Subv is a Google Chrome extension.</h1>
 				<a class="btn btn-large btn-primary btn-huge" href="//raw.github.com/gDD/subv-build/master/subv-latest.crx">Install Subv</a>
 				<a class="btn btn-large btn-huge" href="//github.com/gDD/subv">Fork me on GitHub</a>
 				<h6 class="latest-version">latest version: <span id="version">checking...</span></h6>
