--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 			//console.log("version_latest: " + data.version_latest);
 			var v = document.getElementById("version");
 			v.innerText = data.version_latest;
+			var d = document.getElementById("download");
+			d.href += "?v=" + data.version_latest;
 		}
 	</script>
 	<style>
@@ -38,7 +40,7 @@
 		<div class="row">
 			<div class="span8">
 				<h1 style="margin-bottom: 1em"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/f/fa/Google_Chrome_2011_computer_icon.svg/200px-Google_Chrome_2011_computer_icon.svg.png" alt="Google Chrome Logo" id="chrome-logo">Subv is a Google Chrome extension.</h1>
-				<a class="btn btn-large btn-primary btn-huge" href="http://gdd.github.com/download/subv/subv-latest.crx">Install Subv</a>
+				<a class="btn btn-large btn-primary btn-huge" id="download" href="http://gdd.github.com/download/subv/subv-latest.crx">Install Subv</a>
 				<a class="btn btn-large btn-huge" href="https://github.com/gDD/subv">Fork me on GitHub</a>
 				<h6 class="latest-version">latest version: <span id="version">checking...</span></h6>
 			</div>
