--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
 	</div>
 	<!-- update latest version -->
 	<script type="text/javascript" src="https://raw.github.com/gDD/download/master/subv/subv-latest.jsonp"></script>
+	<script type="text/javascript">
+
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-26964051-1']);
+		_gaq.push(['_setDomainName', 'meiar.org']);
+		_gaq.push(['_trackPageview']);
+		
+		(function() {
+		  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+
+	</script>
 </body>
 </html>
 <!-- EOF -->
