use amplify.store and mark item as read when click

--- a/subv.html
+++ b/subv.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="assets/third/css/font-awesome.css" />
 	<link rel="stylesheet" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
+	<script type="text/javascript" src="assets/third/js/amplify.store.js"></script>
 	<script type="text/javascript" src="assets/third/js/doT.js"></script>	
 	<script type="text/javascript" src="assets/third/js/bootstrap.js"></script>
 	<script type="text/javascript" src="assets/js/subv.js"></script>	
@@ -55,6 +56,13 @@
 				<!--<button class="btn btn-large btn-primary">Apply</button>-->
 				<button id="reload" class="btn btn-large btn-primary"><i class="icon-refresh"></i> Reload</button>
 				<button class="btn btn-large span4 pull-right" id="more">more</button>
+			</div>
+		</div>
+		<div class="row">
+			<div class="span8">
+				<h3>Read Items:<button class="btn btn-small" id="show-read-list">show</button></h3>
+				<div id="read-list">
+				</div>
 			</div>
 		</div>
 	</div><!-- .container -->
