fixes bug for banned/read-list

--- a/subv.html
+++ b/subv.html
@@ -64,7 +64,7 @@
 						</button>
 						<ul class="dropdown-menu">
 							<li><a id="mark-all-read" href="#">&amp; mark all as read</a></li>
-							<li><a id="mark-ban-unread" href="#">&amp; ban unread</a></li>
+							<li><a id="mark-ban-unread" href="#">&amp; ban unread (unban is not implemented)</a></li>
 						</ul>
 					</div><!-- .btn-group -->
 					<button class="btn btn-large span4 pull-right" id="more">more</button>
