--- a/subv.html
+++ b/subv.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="assets/third/css/bootstrap.css" />
-	<!--<link rel="stylesheet" href="assets/third/css/bootstrap-responsive.css" />-->
+	<link rel="stylesheet" href="assets/third/css/bootstrap-responsive.css" />
 	<link rel="stylesheet" href="assets/third/css/font-awesome.css" />
 	<link rel="stylesheet" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
@@ -18,7 +18,7 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="span8">
+			<div class="span12">
 				<div class="navbar">
 					<div class="navbar-inner">
 						<div class="container">
@@ -46,45 +46,39 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="span8">
-				<div id="list">
-					<!-- .item's here -->
-				</div>
+			<div class="span6">
+				<div id="items-view">
+					<div id="list">
+						<!-- .item's here -->
+					</div>
+	
+					<div class="btn-toolbar">
+						<div class="btn-group">
+							<button id="reload" class="btn btn-large btn-primary">
+								<i class="icon-refresh"></i> Reload
+							</button>
+							<button class="btn btn-large btn-primary dropdown-toggle" data-toggle="dropdown">
+								<span class="caret"></span>
+							</button>
+							<ul class="dropdown-menu">
+								<li><a id="mark-all-read" href="#">&amp; mark all as read</a></li>
+								<li><a id="mark-ban-unread" href="#">&amp; ban unread (unban is not implemented)</a></li>
+							</ul>
+						</div><!-- .btn-group -->
+						<button class="btn btn-large span3 pull-right" id="more">more</button>
+					</div>
+	
+					<h3><button class="btn" id="show-read-list"><span class="caret"></span></button> Read Items:</h3>
+					<div id="read-list"></div>
+	
+					<h3><button class="btn" id="show-banned-list"><span class="caret"></span></button> Banned Items:</h3>
+					<div id="banned-list"></div>
+				</div><!-- /.span6 -->
 			</div>
-		</div>
-		<div class="row">
-			<div class="span8">
-				<div class="btn-toolbar">
-					<div class="btn-group">
-						<button id="reload" class="btn btn-large btn-primary">
-							<i class="icon-refresh"></i> Reload
-						</button>
-						<button class="btn btn-large btn-primary dropdown-toggle" data-toggle="dropdown">
-							<span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu">
-							<li><a id="mark-all-read" href="#">&amp; mark all as read</a></li>
-							<li><a id="mark-ban-unread" href="#">&amp; ban unread (unban is not implemented)</a></li>
-						</ul>
-					</div><!-- .btn-group -->
-					<button class="btn btn-large span4 pull-right" id="more">more</button>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="span8">
-				<h3><button class="btn" id="show-read-list"><span class="caret"></span></button> Read Items:</h3>
-				<div id="read-list">
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="span8">
-				<h3><button class="btn" id="show-banned-list"><span class="caret"></span></button> Banned Items:</h3>
-				<div id="banned-list">
-				</div>
-			</div>
-		</div>
+			<div class="span6">
+				<div id="item-view"></div>
+			</div><!-- /.span6 -->
+		</div><!-- /.row -->
 	</div><!-- .container -->
 
 <script type="text/template" id="item">
