--- a/subv.html
+++ b/subv.html
@@ -45,7 +45,16 @@
 
 		<div class="row-fluid">
 			<div class="span12" id="width-controller-container">
-				<input type="range" id="width-controller" min="1" max="100" value="50" step="1" />
+				<table>
+					<tr>
+						<td>
+							<input id="width-adjuster" type="range" min="0" max="24" value="0" step="1" />
+						</td>
+						<td>
+							<input id="width-splitter" type="range" min="30" max="100" value="50" step="1" />
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 
@@ -54,6 +63,10 @@
 				<div class="span" id="items">
 					<div id="latest"></div>
 			
+					<div class="btn-toolbar">
+						<button class="btn" id="more">more</button>
+					</div>
+
 					<div class="btn-toolbar">
 						<div class="btn-group">
 							<button id="reload" class="btn">
@@ -67,7 +80,6 @@
 								<li><a id="mark-ban-unread" href="#">&amp; ban unread (unban is not implemented)</a></li>
 							</ul>
 						</div><!-- .btn-group -->
-						<button class="btn span2" id="more">more</button>
 					</div>
 			
 					<h3><button class="btn" id="show-read-list"><span class="caret"></span></button> Read Items:</h3>
@@ -88,13 +100,13 @@
 		<div class="item-heading">
 			<h3>
 				<span class="status"></span>
-				<span class="title"><a class="clickpass" title="{{=it.title}}" href="{{=it.path}}">{{=it.title}}</a></span>
-				<span class="tag">(<a href="{{=it.tag.path}}">{{=it.tag.name}}</a>)</span>
+				<span class="tag">[<a href="{{=it.tag.path}}">{{=it.tag.name /* path.split("/").pop().toUpperCase() */}}</a>]</span><!--
+				--> <span class="title"><a class="clickpass" title="{{=it.title}}" href="{{=it.path}}">{{=it.title}}</a></span>
 			</h3>
 		</div>
 		<div class="item-meta">
 			<a class="author" href="{{=it.comments[0].user.path}}">{{=it.comments[0].user.name}}</a>
-			&bullet; <span class="comments-count"><a href="{{=it.path}}">{{=it.comments_count}} comments</a></span>
+			&middot; <span class="comments-count"><a href="{{=it.path}}">{{=it.comments_count}} comments</a></span>
 			<!--
 			<span class="time" x-title="{{=it.last_updated_time_iso}}">{{=it.last_updated_time_ago}}</span>
 			-->
