namespacing v2ex api

--- a/subv.html
+++ b/subv.html
@@ -11,8 +11,8 @@
 	<script type="text/javascript" src="assets/third/js/amplify.store.js"></script>
 	<script type="text/javascript" src="assets/third/js/doT.js"></script>	
 	<script type="text/javascript" src="assets/third/js/bootstrap.js"></script>
-	<script type="text/javascript" src="assets/js/subv-expose-json.js"></script>	
 	<script type="text/javascript" src="assets/js/subv.js"></script>	
+	<script type="text/javascript" src="assets/js/subv.api.v2ex.js"></script>	
 	<title>Subv</title>
 </head>
 <body>
