--- a/subv.html
+++ b/subv.html
@@ -2,11 +2,10 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="assets/third/css/bootstrap.css" />
-	<link rel="stylesheet" href="assets/third/css/bootstrap-responsive.css" />
-	<link rel="stylesheet" href="assets/third/css/font-awesome.css" />
-	<link rel="stylesheet" href="assets/css/subv.css" />
+	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap-responsive.css" />
+	<link rel="stylesheet" type="text/css" href="assets/third/css/font-awesome.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
 	<script type="text/javascript" src="assets/third/js/amplify.store.js"></script>
 	<script type="text/javascript" src="assets/third/js/doT.js"></script>	
@@ -48,7 +47,7 @@
 				<table>
 					<tr>
 						<td>
-							<input id="width-adjuster" type="range" min="0" max="24" value="0" step="1" />
+							<input id="width-adjuster" type="range" min="0" max="24" value="6" step="1" />
 						</td>
 						<td>
 							<input id="width-splitter" type="range" min="30" max="100" value="50" step="1" />
@@ -60,7 +59,7 @@
 
 		<div class="row-fluid" style="background-color: #f6f6ef; min-height: 1024px; padding-bottom: 128px;">
 			<div class="span12">
-				<div class="span" id="items">
+				<div id="items">
 					<div id="latest"></div>
 			
 					<div class="btn-toolbar">
@@ -89,7 +88,9 @@
 					<div id="banned"></div>
 				</div>
 	
-				<div class="span" id="item"></div>
+				<div id="item">
+					<div id="view"></div>
+				</div>
 			</div><!-- /.span12 -->
 		</div><!-- /.row -->
 	</div><!-- .container -->
@@ -112,7 +113,8 @@
 			-->
 		</div>
 		<div class="item-comments">
-			<div class="loading-indicator"></div>
+			<div class="loading-indicator"><h3 class="pagination-right">Loading...</h3></div>
+			<div class="op"></div>
 			<div class="page-1"></div>
 			<div class="page-2"></div>
 			<div class="page-3"></div>
@@ -123,6 +125,7 @@
 			<div class="page-8"></div>
 			<div class="page-9"></div>
 			<div class="page-10"></div>
+			<button class="btn js-show-comment-box">add comment</button>
 			<div class="comment">
 				<form class="comment-form" method="post" action="{{=it.comment_url}}">
 					<textarea name="content" maxlength="10000" id="comment"></textarea>
