--- a/subv.html
+++ b/subv.html
@@ -46,7 +46,7 @@
 			<div class="span12" id="width-controller-container">
 				<table>
 					<tr>
-						<td>
+						<td style="padding-right: 1em;">
 							<input id="width-adjuster" type="range" min="0" max="24" value="6" step="1" />
 						</td>
 						<td>
@@ -63,30 +63,50 @@
 					<div id="latest"></div>
 			
 					<div class="btn-toolbar">
-						<button class="btn" id="more">more</button>
-					</div>
-
-					<div class="btn-toolbar">
-						<div class="btn-group">
-							<button id="reload" class="btn">
-								<i class="icon-refresh"></i> Reload
-							</button>
-							<button class="btn dropdown-toggle" data-toggle="dropdown">
-								<span class="caret"></span>
-							</button>
-							<ul class="dropdown-menu">
-								<li><a id="mark-all-read" href="#">&amp; mark all as read</a></li>
-								<li><a id="mark-ban-unread" href="#">&amp; ban unread (unban is not implemented)</a></li>
-							</ul>
-						</div><!-- .btn-group -->
+						<table class="full-width">
+							<tr>
+								<td style="width: 1px; white-space: nowrap;">
+									<div class="btn-group">
+										<button id="reload" class="btn">
+											<i class="icon-refresh"></i> Reload
+										</button>
+										<button class="btn dropdown-toggle" data-toggle="dropdown">
+											<span class="caret"></span>
+										</button>
+										<ul class="dropdown-menu">
+											<li><a id="mark-all-read" href="#">&amp; mark all as read</a></li>
+											<li><a id="mark-ban-unread" href="#">&amp; ban unread (unban is not implemented)</a></li>
+										</ul>
+									</div><!-- .btn-group -->
+								</td>
+								<td style="padding-left: 1em;">
+									<div class="btn-group full-width">
+										<button class="btn" id="more">more</button>
+									</div>
+								</td>
+							</tr>
+						</table>
 					</div>
 			
-					<h3><button class="btn" id="show-read-list"><span class="caret"></span></button> Read Items:</h3>
+					<div class="btn-toolbar">
+						<button class="btn full-width" id="read-items-toggle">
+							<span class="caret"></span>
+							Read Items
+							(<span id="read-items-counter">0</span>)
+						</button>
+					</div>
 					<div id="read"></div>
 			
-					<h3><button class="btn" id="show-banned-list"><span class="caret"></span></button> Banned Items:</h3>
+					<div class="btn-toolbar">
+						<button class="btn full-width" id="banned-items-toggle">
+							<span class="caret"></span>
+							Banned Items
+							(<span id="banned-items-counter">0</span>)
+						</button>
+						</button>
+					</div>
 					<div id="banned"></div>
-				</div>
+				</div><!-- /#items -->
 	
 				<div id="item">
 					<div id="view"></div>
@@ -128,7 +148,7 @@
 				<form class="comment-form" method="post" action="{{=it.comment_url}}">
 					<textarea name="content" maxlength="10000" id="comment"></textarea>
 					<br/>
-					<input type="submit" class="btn comment-submit" value="ok" />
+					<input type="submit" class="btn comment-submit" value="post" />
 				</form>
 			</div>
 		</div>
