added screenshot link to download page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 			width: 48px;
 			margin-right: 12px;
 		}
+		img {
+			width: 100%;
+		}
+		body {
+			padding-bottom: 128px;
+		}
 	</style>
 </head>
 <body>
@@ -45,8 +51,14 @@
 				<h6 class="latest-version">latest version: <span id="version">checking...</span></h6>
 			</div>
 		</div>
+		<div class="row">
+			<div class="span8">
+				<h1>Screenshot:</h1>
+				<a title="we love screenshot" href="http://i.imgur.com/eLrnr.png"><img src="http://i.imgur.com/eLrnr.png" alt="screenshot" /></a>
+			</div>
+		</div>
 	</div>
-	<!-- update latest version -->
+	<!-- display the latest version -->
 	<script type="text/javascript" src="https://raw.github.com/gDD/download/gh-pages/subv/subv-latest.jsonp"></script>
 	<script type="text/javascript">
 
