minor style change

--- a/subv.html
+++ b/subv.html
@@ -19,7 +19,7 @@
 		<div class="row-fluid">
 			<div class="span12">
 				<div id="nav">
-					<a href="http://www.v2ex.com" class="brand" id="logo">Subv/V2EX</a>
+					<a href="http://www.v2ex.com" class="brand" id="logo">Subv/<span class="brand-v2ex">V2EX</span></a>
 					<div class="pull-right">
 						<div class="btn-group" style="display: inline-block">
 							<button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -27,8 +27,6 @@
 								<span class="caret"></span>
 							</button>
 							<ul class="dropdown-menu dropdown-menu-no-caret">
-								<li>
-								</li>
 								<li><a href="#">my profile</a></li>
 								<li><a href="#">notifications</a></li>
 								<li><a href="#">favorites</a></li>
