--- a/subv.html
+++ b/subv.html
@@ -66,7 +66,7 @@
 					</div>
 					<div class="footer-tb-more">
 						<div class="btn-group full-width">
-							<button class="btn" id="more">more</button>
+							<button class="btn full-width" id="more">more</button>
 						</div>
 					</div>
 				</div>
@@ -93,7 +93,7 @@
 
 			<div id="item">
 				<div id="view"></div>
-			</div>
+			</div><!-- /#item -->
 		</div><!-- /#content -->
 	</div><!-- /#wrapper -->
 
